Updated Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -2880,7 +2880,7 @@ msgstr "Nelze najít zásuvný modul VPN pro „%s“."
 #: ../src/connection-editor/page-vpn.c:120
 #, c-format
 msgid "Could not load editor VPN plugin for '%s' (%s)."
-msgstr "Nelze načíst zásuvný modul editor VPN pro „%s“."
+msgstr "Nelze načíst zásuvný modul editor VPN pro „%s“ (%s)."
 
 #: ../src/connection-editor/page-vpn.c:121
 msgid "unknown failure"
