po: Ternary -> Tertiary in po files
Related: 57ea6851dfbfa332041fdece5567aac8066acc62

--- a/po/as.po
+++ b/po/as.po
@@ -3290,7 +3290,7 @@ msgstr "দ্বিতীয় পাছৱৰ্ড (_S):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "দ্বিতীয় পাছৱৰ্ড (_S):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
