--- a/po/be.po
+++ b/po/be.po
@@ -3325,7 +3325,7 @@ msgstr "П_ароль:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "П_ароль:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
