--- a/po/cs.po
+++ b/po/cs.po
@@ -3292,7 +3292,7 @@ msgstr "_Sekundární heslo:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Terciální heslo:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
