--- a/po/da.po
+++ b/po/da.po
@@ -3316,7 +3316,7 @@ msgstr "_Sekundær adgangskode:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Sekundær adgangskode:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
