--- a/po/el.po
+++ b/po/el.po
@@ -3327,7 +3327,7 @@ msgstr "_Δευτερεύων κωδικός πρόσβασης:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Δευτερεύων κωδικός πρόσβασης:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
