--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3315,7 +3315,7 @@ msgstr "_Password:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Password:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
