--- a/po/et.po
+++ b/po/et.po
@@ -3305,7 +3305,7 @@ msgstr "_Parool:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Parool:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
