--- a/po/fi.po
+++ b/po/fi.po
@@ -3271,7 +3271,7 @@ msgstr "_Toissijainen salasana:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Toissijainen salasana:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
