--- a/po/hr.po
+++ b/po/hr.po
@@ -3166,7 +3166,7 @@ msgstr ""
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr ""
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
