--- a/po/id.po
+++ b/po/id.po
@@ -3289,7 +3289,7 @@ msgstr "Sandi _Sekunder:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Sandi _Tersier: "
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
