--- a/po/it.po
+++ b/po/it.po
@@ -3353,7 +3353,7 @@ msgstr "_Password secondaria:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Password ternaria:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
