--- a/po/kn.po
+++ b/po/kn.po
@@ -3372,7 +3372,7 @@ msgstr "ಗುಪ್ತಪದ(_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ಗುಪ್ತಪದ(_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
