--- a/po/lt.po
+++ b/po/lt.po
@@ -3286,7 +3286,7 @@ msgstr "_Antrinis slaptažodis:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Antrinis slaptažodis:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
