--- a/po/ml.po
+++ b/po/ml.po
@@ -3292,7 +3292,7 @@ msgstr "_ദ്വിതീയ തലത്തിലുള്ള അടയാള
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_ദ്വിതീയ തലത്തിലുള്ള അടയാളവാക്ക്:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
