--- a/po/ne.po
+++ b/po/ne.po
@@ -3241,7 +3241,7 @@ msgstr "गौण डीएनएस:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "निजी कुञ्जी पासवर्ड:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
