--- a/po/nl.po
+++ b/po/nl.po
@@ -3382,7 +3382,7 @@ msgstr "_Tweede wachtwoord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Derde wachtwoord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
