--- a/po/nn.po
+++ b/po/nn.po
@@ -3338,7 +3338,7 @@ msgstr "_Passord:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Passord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
