--- a/po/oc.po
+++ b/po/oc.po
@@ -3305,7 +3305,7 @@ msgstr "Senhal _segondari :"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Senhal _terciari :"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
