--- a/po/or.po
+++ b/po/or.po
@@ -3353,7 +3353,7 @@ msgstr "ପ୍ରବେଶ ସଙ୍କେତ (_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ପ୍ରବେଶ ସଙ୍କେତ (_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
