--- a/po/pa.po
+++ b/po/pa.po
@@ -3257,7 +3257,7 @@ msgstr "ਸੈਕੰਡਰੀ ਪਾਸਵਰਡ(_S):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ਸੈਕੰਡਰੀ ਪਾਸਵਰਡ(_S):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
