--- a/po/pl.po
+++ b/po/pl.po
@@ -3314,7 +3314,7 @@ msgstr "_Drugie hasło:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Trzecie hasło:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
