--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3330,7 +3330,7 @@ msgstr "_Senha secundária:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Senha _terciária:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
