--- a/po/ru.po
+++ b/po/ru.po
@@ -3306,7 +3306,7 @@ msgstr "_Дополнительный пароль:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Дополнительный пароль:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
