--- a/po/th.po
+++ b/po/th.po
@@ -3286,7 +3286,7 @@ msgstr "_รหัสผ่าน:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_รหัสผ่าน:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
