--- a/po/tr.po
+++ b/po/tr.po
@@ -3285,7 +3285,7 @@ msgstr "_İkincil Parola:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Üçüncül Parola:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
