--- a/po/ug.po
+++ b/po/ug.po
@@ -3303,7 +3303,7 @@ msgstr "ئىم(_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ئىم(_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
