--- a/po/uk.po
+++ b/po/uk.po
@@ -3359,7 +3359,7 @@ msgstr "_Пароль:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Пароль:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
