--- a/po/af.po
+++ b/po/af.po
@@ -3264,7 +3264,7 @@ msgstr "W_agwoord:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "W_agwoord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
