--- a/po/an.po
+++ b/po/an.po
@@ -3406,7 +3406,7 @@ msgstr "Clau de _paso:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Clau de _paso:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
