--- a/po/ar.po
+++ b/po/ar.po
@@ -3331,7 +3331,7 @@ msgstr "_كلمة السر:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_كلمة السر:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
