--- a/po/ast.po
+++ b/po/ast.po
@@ -3364,7 +3364,7 @@ msgstr "_Contraseña:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Contraseña:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
