--- a/po/bg.po
+++ b/po/bg.po
@@ -3329,7 +3329,7 @@ msgstr "_Втора парола:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Втора парола:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
