--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -3373,7 +3373,7 @@ msgstr "পাসওয়ার্ড: (_P)"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "পাসওয়ার্ড: (_P)"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
