--- a/po/bs.po
+++ b/po/bs.po
@@ -3302,7 +3302,7 @@ msgstr "_Sekundarna lozinka:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Sekundarna lozinka:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
