--- a/po/ca.po
+++ b/po/ca.po
@@ -3324,7 +3324,7 @@ msgstr "Contrasenya _secundària:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Contrasenya _ternària:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
