--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -3348,7 +3348,7 @@ msgstr "Contrasenya _secundària:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Contrasenya _secundària:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
