--- a/po/crh.po
+++ b/po/crh.po
@@ -3350,7 +3350,7 @@ msgstr "_Ekilemci Sır-söz:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Ekilemci Sır-söz:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
