--- a/po/de.po
+++ b/po/de.po
@@ -3362,7 +3362,7 @@ msgstr "_Sekundäres Passwort:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Tertiäres Passwort:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
