--- a/po/dz.po
+++ b/po/dz.po
@@ -3246,7 +3246,7 @@ msgstr "གལ་གནད་ཆུང་བ་ཌི་ཨེན་ཨེསི
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "སྒེར་སྡེ་ལྡེ་མིག་ཆོག་ཡིག:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
