--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -3232,7 +3232,7 @@ msgstr "Secondary DNS:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Password:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
