--- a/po/eo.po
+++ b/po/eo.po
@@ -3319,7 +3319,7 @@ msgstr "_Duaranga pasvorto:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Duaranga pasvorto:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
