--- a/po/eu.po
+++ b/po/eu.po
@@ -3315,7 +3315,7 @@ msgstr "_Bigarren pasahitza:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Bigarren pasahitza:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
