--- a/po/fa.po
+++ b/po/fa.po
@@ -3339,7 +3339,7 @@ msgstr "_گذرواژه:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_گذرواژه:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
