--- a/po/fr.po
+++ b/po/fr.po
@@ -3338,7 +3338,7 @@ msgstr "Mot de passe _secondaire :"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Mot de passe _secondaire :"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
