--- a/po/gd.po
+++ b/po/gd.po
@@ -3388,7 +3388,7 @@ msgstr "_Facal-faire dàrnach:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Treas facal-faire:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
