--- a/po/gl.po
+++ b/po/gl.po
@@ -3327,7 +3327,7 @@ msgstr "Contrasinal _secundario:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Contrasinal _secundario:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
