--- a/po/gu.po
+++ b/po/gu.po
@@ -3273,7 +3273,7 @@ msgstr "ગૌણ પાસવર્ડ (_S):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ગૌણ પાસવર્ડ (_S):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
