--- a/po/he.po
+++ b/po/he.po
@@ -3283,7 +3283,7 @@ msgstr "ססמה מ_שנית:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ססמה מ_שנית:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
