--- a/po/hi.po
+++ b/po/hi.po
@@ -3290,7 +3290,7 @@ msgstr "कूटशब्द (_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "कूटशब्द (_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
