--- a/po/hu.po
+++ b/po/hu.po
@@ -3306,7 +3306,7 @@ msgstr "_Másodlagos jelszó:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Harmadlagos jelszó:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
