--- a/po/ja.po
+++ b/po/ja.po
@@ -3294,7 +3294,7 @@ msgstr "セカンダリパスワード(_S):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "セカンダリパスワード(_S):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
