--- a/po/kk.po
+++ b/po/kk.po
@@ -3198,7 +3198,7 @@ msgstr "Қо_сымша пароль:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Ү_шіншілік пароль:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
