--- a/po/km.po
+++ b/po/km.po
@@ -3246,7 +3246,7 @@ msgstr "ពាក្យសម្ងាត់៖"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "ពាក្យសម្ងាត់៖"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
