--- a/po/ko.po
+++ b/po/ko.po
@@ -3275,7 +3275,7 @@ msgstr "보조 암호(_S):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "보조 암호(_S):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
