--- a/po/ku.po
+++ b/po/ku.po
@@ -3208,7 +3208,7 @@ msgstr "Şî_fre:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Şî_fre:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
