--- a/po/lv.po
+++ b/po/lv.po
@@ -3323,7 +3323,7 @@ msgstr "_Sekundārā parole:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Sekundārā parole:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
