--- a/po/mk.po
+++ b/po/mk.po
@@ -3384,7 +3384,7 @@ msgstr "_Лозинка:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Лозинка:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
