--- a/po/mr.po
+++ b/po/mr.po
@@ -3320,7 +3320,7 @@ msgstr "पासवर्ड (_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "पासवर्ड (_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
