--- a/po/ms.po
+++ b/po/ms.po
@@ -3363,7 +3363,7 @@ msgstr "_Katalaluan:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Katalaluan:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
