--- a/po/nb.po
+++ b/po/nb.po
@@ -3295,7 +3295,7 @@ msgstr "_Sekundært passord:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Sekundært passord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
