--- a/po/pt.po
+++ b/po/pt.po
@@ -3291,7 +3291,7 @@ msgstr "_Senha secundária:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Senha terciária:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
