--- a/po/ro.po
+++ b/po/ro.po
@@ -3398,7 +3398,7 @@ msgstr "_Parolă:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Parolă:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
