--- a/po/sk.po
+++ b/po/sk.po
@@ -3379,7 +3379,7 @@ msgstr "_Sekundárne heslo:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Sekundárne heslo:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
