--- a/po/sl.po
+++ b/po/sl.po
@@ -3317,7 +3317,7 @@ msgstr "_Drugotno geslo:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Drugotno geslo:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
