--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -3287,7 +3287,7 @@ msgstr "_Druga lozinka:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Treća lozinka:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
