--- a/po/sv.po
+++ b/po/sv.po
@@ -3311,7 +3311,7 @@ msgstr "_Sekundärt lösenord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Tertiärt lösenord:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
