--- a/po/ta.po
+++ b/po/ta.po
@@ -3337,7 +3337,7 @@ msgstr "கடவுச்சொல் (_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "கடவுச்சொல் (_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
