--- a/po/te.po
+++ b/po/te.po
@@ -3299,7 +3299,7 @@ msgstr "సంకేతపదము (_P):"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "సంకేతపదము (_P):"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
