--- a/po/tg.po
+++ b/po/tg.po
@@ -3468,7 +3468,7 @@ msgstr "_Пароли иловагӣ:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_Пароли иловагӣ:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
