--- a/po/ur.po
+++ b/po/ur.po
@@ -3384,7 +3384,7 @@ msgstr "_پاس ورڈ:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "_پاس ورڈ:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
