--- a/po/vi.po
+++ b/po/vi.po
@@ -3265,7 +3265,7 @@ msgstr "Mật khẩu _phụ:"
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "Mật khẩu _phụ:"
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
