--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3508,7 +3508,7 @@ msgstr "次要密码(_S)："
 
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "三元密码(_T)："
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
