--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -3235,7 +3235,7 @@ msgstr "第二密碼(_S)："
 #: ../src/libnma/nma-vpn-password-dialog.c:102
 #: ../src/libnm-gtk/nm-vpn-password-dialog.c:102
 #, fuzzy
-msgid "_Ternary Password:"
+msgid "_Tertiary Password:"
 msgstr "第二密碼(_S)："
 
 #: ../src/libnma/nma-vpn-password-dialog.c:247
