editor: spell 802.1X standard right with capital "X" (rh #1274505)
and update po files accordingly

https://bugzilla.redhat.com/show_bug.cgi?id=1274505

--- a/po/cs.po
+++ b/po/cs.po
@@ -2401,12 +2401,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Připojení s UUID „%s“ nebylo nalezeno"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "Zabezpečení 802.1x"
+msgid "802.1X Security"
+msgstr "Zabezpečení 802.1X"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Nelze nahrát uživatelské rozhraní bezpečnosti 802.1x."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Nelze nahrát uživatelské rozhraní bezpečnosti 802.1X."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2968,8 +2968,8 @@ msgstr "Heslo WEP 128 bitů"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dynamické WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dynamické WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:973 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3542,8 +3542,8 @@ msgid "%s connection"
 msgstr "Připojení %s"
 
 #: ../src/wireless-security/eap-method.c:57
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "neurčená chyba v zabezpečení 802.1x (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "neurčená chyba v zabezpečení 802.1X (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:233
 msgid "no file selected"
@@ -3755,8 +3755,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "neplatný certifikát CA pro EAP-TLS: žádný certifikát nebyl zadán"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Neznámá chyba při ověřování bezpečnosti 802.1x"
+msgid "Unknown error validating 802.1X security"
+msgstr "Neznámá chyba při ověřování bezpečnosti 802.1X"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
