--- a/po/de.po
+++ b/po/de.po
@@ -2440,12 +2440,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Eine Verbindung mit der UUID »%s« konnte nicht gefunden werden"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x-Sicherheit"
+msgid "802.1X Security"
+msgstr "802.1X-Sicherheit"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Sichere 802.1x-Benutzerschnittstelle konnte nicht geladen werden."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Sichere 802.1X-Benutzerschnittstelle konnte nicht geladen werden."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3018,8 +3018,8 @@ msgstr "WEP 128-bit Kennwort"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dynamisches WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dynamisches WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3615,8 +3615,8 @@ msgid "%s connection"
 msgstr "Verbindung mit %s"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "Nicht definierter Fehler in der 802.1x-Sicherheit (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "Nicht definierter Fehler in der 802.1X-Sicherheit (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:233
 msgid "no file selected"
@@ -3828,8 +3828,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "Ungültiges EAP-TTLS-CA-Zertifikat: Kein Zertifikat angegeben"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Unbekannter Fehler beim Überprüfen der 802.1x-Sicherheit"
+msgid "Unknown error validating 802.1X security"
+msgstr "Unbekannter Fehler beim Überprüfen der 802.1X-Sicherheit"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
