--- a/po/it.po
+++ b/po/it.po
@@ -2435,12 +2435,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Non è possibile trovare una connessione con l'UUID «%s»"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "Sicurezza 802.1x"
+msgid "802.1X Security"
+msgstr "Sicurezza 802.1X"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Impossibile caricare l'interfaccia utente per la sicurezza 802.1x."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Impossibile caricare l'interfaccia utente per la sicurezza 802.1X."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3006,8 +3006,8 @@ msgstr "Frase di accesso WEP a 128 bit"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "WEP dinamico (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "WEP dinamico (802.1X)"
 
 # (Cito da http://it.wikipedia.org/wiki/Wi-Fi_Protected_Access)
 #
@@ -3613,8 +3613,8 @@ msgid "%s connection"
 msgstr "Connessione %s"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "errore non definito nella sicurezza 802.1x (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "errore non definito nella sicurezza 802.1X (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:255
 msgid "unspecified error validating eap-method file"
@@ -3823,8 +3823,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "certificato CA EAP-TTLS non valido: nessun certificato specificato"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Errore sconosciuto nel validare la sicurezza 802.1x"
+msgid "Unknown error validating 802.1X security"
+msgstr "Errore sconosciuto nel validare la sicurezza 802.1X"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
