--- a/po/lt.po
+++ b/po/lt.po
@@ -2394,12 +2394,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Nepavyko rasti ryšio, kurio UUID „%s“"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x sauga"
+msgid "802.1X Security"
+msgstr "802.1X sauga"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Nepavyko įkelti 802.1x saugos naudotojo sąsajos."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Nepavyko įkelti 802.1X saugos naudotojo sąsajos."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2950,8 +2950,8 @@ msgstr "WEP 128 bitų slaptažodis"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dinaminis WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dinaminis WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3537,8 +3537,8 @@ msgid "%s connection"
 msgstr "%s ryšys"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "neapibrėžta 802.1x saugumo klaida (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "neapibrėžta 802.1X saugumo klaida (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:255
 msgid "unspecified error validating eap-method file"
@@ -3746,8 +3746,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "netinkamas EAP-TTLS LĮ liudijimas: nenurodytas liudijimas"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Nežinoma klaida tikrinant 802.1x saugumą"
+msgid "Unknown error validating 802.1X security"
+msgstr "Nežinoma klaida tikrinant 802.1X saugumą"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
