--- a/po/pl.po
+++ b/po/pl.po
@@ -2423,12 +2423,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Nie odnaleziono połączenia z UUID „%s”"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "Zabezpieczenia 802.1x"
+msgid "802.1X Security"
+msgstr "Zabezpieczenia 802.1X"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Nie można wczytać interfejsu użytkownika zabezpieczeń 802.1x."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Nie można wczytać interfejsu użytkownika zabezpieczeń 802.1X."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2988,8 +2988,8 @@ msgstr "128-bitowe hasło WEP"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dynamiczny WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dynamiczny WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:973 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3564,8 +3564,8 @@ msgid "%s connection"
 msgstr "Połączenie %s"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "nieokreślony błąd w zabezpieczeniach 802.1x (WPA-EAP)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "nieokreślony błąd w zabezpieczeniach 802.1X (WPA-EAP)"
 
 #: ../src/wireless-security/eap-method.c:233
 msgid "no file selected"
@@ -3778,8 +3778,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "nieprawidłowy certyfikat CA EAP-TTLS: nie podano certyfikatu"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Nieznany błąd podczas sprawdzania poprawności zabezpieczeń 802.1x"
+msgid "Unknown error validating 802.1X security"
+msgstr "Nieznany błąd podczas sprawdzania poprawności zabezpieczeń 802.1X"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
