--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -2431,11 +2431,11 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "No s'ha pogut trobar cap connexió amb UUID «%s»"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
+msgid "802.1X Security"
 msgstr "Seguretat 802.1X"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
+msgid "Could not load 802.1X Security user interface."
 msgstr ""
 "No s'ha pogut carregar la interfície d'usuari per a la seguretat de 802.1X."
 
@@ -3001,8 +3001,8 @@ msgstr "Contrasenya WEP de 128 bits"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "WEP dinàmic (802.1X)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "WEP dinàmic 802.1X"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3599,7 +3599,7 @@ msgid "%s connection"
 msgstr "connexió de %s"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
 msgstr ""
 
 #: ../src/wireless-security/eap-method.c:255
@@ -3809,7 +3809,7 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
+msgid "Unknown error validating 802.1X security"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:436
