--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -2368,11 +2368,11 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr ""
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
+msgid "802.1X Security"
 msgstr ""
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
+msgid "Could not load 802.1X Security user interface."
 msgstr ""
 
 #: ../src/connection-editor/page-8021x-security.c:125
@@ -2910,7 +2910,7 @@ msgstr "WEP Passphrase"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
 msgstr ""
 
 #: ../src/connection-editor/page-wifi-security.c:358
@@ -3486,7 +3486,7 @@ msgid "%s connection"
 msgstr "VPN Connections"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
 msgstr ""
 
 #: ../src/wireless-security/eap-method.c:255
@@ -3692,7 +3692,7 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
+msgid "Unknown error validating 802.1X security"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:436
