--- a/po/gu.po
+++ b/po/gu.po
@@ -2379,12 +2379,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "UUID '%s' સાથે જોડાણને શોધી શક્યા નથી"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x સુરક્ષા"
+msgid "802.1X Security"
+msgstr "802.1X સુરક્ષા"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "802.1x સુરક્ષા વપરાશકર્તા ઇન્ટરફેસને લાવી શક્યા નહિં."
+msgid "Could not load 802.1X Security user interface."
+msgstr "802.1X સુરક્ષા વપરાશકર્તા ઇન્ટરફેસને લાવી શક્યા નહિં."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2937,8 +2937,8 @@ msgstr "WEP 128-બીટ પાસફ્રેઝ"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "ગતિક WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "ગતિક WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3521,7 +3521,7 @@ msgid "%s connection"
 msgstr "%s જોડાણ"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
 msgstr ""
 
 #: ../src/wireless-security/eap-method.c:255
@@ -3730,7 +3730,7 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
+msgid "Unknown error validating 802.1X security"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:436
