--- a/po/hu.po
+++ b/po/hu.po
@@ -2403,12 +2403,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Nem található „%s” UUID-vel rendelkező kapcsolat"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x biztonság"
+msgid "802.1X Security"
+msgstr "802.1X biztonság"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Nem tölthető be a 802.1x biztonság felhasználói felülete."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Nem tölthető be a 802.1X biztonság felhasználói felülete."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2971,8 +2971,8 @@ msgstr "WEP 128 bites jelmondat"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dinamikus WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dinamikus WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3558,8 +3558,8 @@ msgid "%s connection"
 msgstr "%s kapcsolat"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "meghatározatlan hiba a 802.1x biztonságban (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "meghatározatlan hiba a 802.1X biztonságban (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:255
 msgid "unspecified error validating eap-method file"
@@ -3767,8 +3767,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "érvénytelen EAP-TTLS CA tanúsítvány: nincs tanúsítvány megadva"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Ismeretlen hiba a 802.1x biztonság ellenőrzésekor"
+msgid "Unknown error validating 802.1X security"
+msgstr "Ismeretlen hiba a 802.1X biztonság ellenőrzésekor"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
