--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -177,7 +177,7 @@ msgstr "Os desenvolvedores do NetworkManager"
 
 #: ../src/8021x.ui.h:1 ../src/ethernet-dialog.c:99
 msgid "802.1X authentication"
-msgstr "Autenticação 802.1x"
+msgstr "Autenticação 802.1X"
 
 #: ../src/8021x.ui.h:2 ../src/connection-editor/ce-ip4-routes.ui.h:1
 #: ../src/connection-editor/ce-ip6-routes.ui.h:1
@@ -2437,12 +2437,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Não é possível localizar a conexão com UUID \"%s\""
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "Segurança 802.1x"
+msgid "802.1X Security"
+msgstr "Segurança 802.1X"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Não foi possível carregar a interface gráfica de segurança 802.1x."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Não foi possível carregar a interface gráfica de segurança 802.1X."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3002,8 +3002,8 @@ msgstr "Frase secreta do WEP de 128 bits"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "WEP dinâmico (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "WEP dinâmico (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:973 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3583,8 +3583,8 @@ msgid "%s connection"
 msgstr "Conexão %s"
 
 #: ../src/wireless-security/eap-method.c:57
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "erro indefinido na segurança 802.1x (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "erro indefinido na segurança 802.1X (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:233
 msgid "no file selected"
@@ -3800,8 +3800,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "certificado de CA EAP-TTLS inválido: nenhum certificado especificado"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Erro desconhecido ao validar a segurança 802.1x"
+msgid "Unknown error validating 802.1X security"
+msgstr "Erro desconhecido ao validar a segurança 802.1X"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
