--- a/po/sv.po
+++ b/po/sv.po
@@ -2409,12 +2409,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "Kunde inte hitta en anslutning med UUID ”%s”"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x-säkerhet"
+msgid "802.1X Security"
+msgstr "802.1X-säkerhet"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
-msgstr "Kunde inte läsa in 802.1x säkerhetsanvändargränssnitt."
+msgid "Could not load 802.1X Security user interface."
+msgstr "Kunde inte läsa in 802.1X säkerhetsanvändargränssnitt."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -2975,8 +2975,8 @@ msgstr "WEP 128-bitars lösenfras"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "Dynamisk WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "Dynamisk WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3563,8 +3563,8 @@ msgid "%s connection"
 msgstr "%s-anslutning"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "odefinierat fel i 802.1x-säkerhet (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "odefinierat fel i 802.1X-säkerhet (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:255
 msgid "unspecified error validating eap-method file"
@@ -3772,8 +3772,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "ogiltigt CA-certifikat för EAP-TTLS: inget certifikat angivet"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "Okänt fel vid validering av 802.1x-säkerhet"
+msgid "Unknown error validating 802.1X security"
+msgstr "Okänt fel vid validering av 802.1X-säkerhet"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
