--- a/po/ta.po
+++ b/po/ta.po
@@ -2424,12 +2424,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr " UUID '%s' உடன் இணைப்பை காணவில்லை."
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
-msgstr "802.1x பாதுகாப்பு"
+msgid "802.1X Security"
+msgstr "802.1X பாதுகாப்பு"
 
 #: ../src/connection-editor/page-8021x-security.c:111
 #, fuzzy
-msgid "Could not load 802.1x Security user interface."
+msgid "Could not load 802.1X Security user interface."
 msgstr "WiFi பாதுகாப்பு பயனர் இடைமுகத்தை ஏற்ற முடியவில்லை."
 
 #: ../src/connection-editor/page-8021x-security.c:125
@@ -2994,8 +2994,8 @@ msgstr "WEP 128-பிட் கடவுச்சொல்"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "மாறும் WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "மாறும் WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3600,7 +3600,7 @@ msgid "%s connection"
 msgstr "அடிப்படை இணைப்பு:"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
 msgstr ""
 
 #: ../src/wireless-security/eap-method.c:255
@@ -3810,7 +3810,7 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
+msgid "Unknown error validating 802.1X security"
 msgstr ""
 
 #: ../src/wireless-security/wireless-security.c:436
