--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2513,11 +2513,11 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "没有找到“%s”连接"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
+msgid "802.1X Security"
 msgstr "802.1X 安全性"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
+msgid "Could not load 802.1X Security user interface."
 msgstr "无法加载 802.1X 安全配置用户界面。"
 
 #: ../src/connection-editor/page-8021x-security.c:125
@@ -3059,8 +3059,8 @@ msgstr "WEP 128 位密码句"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:945 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
-msgstr "动态 WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
+msgstr "动态 WEP (802.1X)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -3713,8 +3713,8 @@ msgid "%s connection"
 msgstr "%s 连接"
 
 #: ../src/wireless-security/eap-method.c:56
-msgid "undefined error in 802.1x security (wpa-eap)"
-msgstr "在 802.1x 安全性中不确定的错误 (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
+msgstr "在 802.1X 安全性中不确定的错误 (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:255
 msgid "unspecified error validating eap-method file"
@@ -3921,8 +3921,8 @@ msgid "invalid EAP-TTLS CA certificate: no certificate specified"
 msgstr "无效的 EAP-TTLS CA 证书：没有指定的证书"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
-msgstr "未知错误验证 802.1x 安全性"
+msgid "Unknown error validating 802.1X security"
+msgstr "未知错误验证 802.1X 安全性"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
