Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -168,7 +168,7 @@ msgstr "Los desarrolladores de NetworkManager"
 
 #: ../src/8021x.ui.h:1 ../src/ethernet-dialog.c:99
 msgid "802.1X authentication"
-msgstr "Autenticación 802.1X"
+msgstr "Autenticación 802.1x"
 
 #: ../src/8021x.ui.h:2 ../src/connection-editor/ce-ip4-routes.ui.h:1
 #: ../src/connection-editor/ce-ip6-routes.ui.h:1
@@ -2885,12 +2885,12 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "No se encontró una conexión con UUID «%s»"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1X Security"
-msgstr "Seguridad 802.1X"
+msgid "802.1x Security"
+msgstr "Seguridad 802.1x"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1X Security user interface."
-msgstr "No se pudo cargar la interfaz de usuario de seguridad 802.1X."
+msgid "Could not load 802.1x Security user interface."
+msgstr "No se pudo cargar la interfaz de usuario de seguridad 802.1x."
 
 #: ../src/connection-editor/page-8021x-security.c:125
 msgid "Use 802.1_X security for this connection"
@@ -3451,8 +3451,8 @@ msgstr "Frase de paso WEP de 128 bits"
 
 #: ../src/connection-editor/page-wifi-security.c:345
 #: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1X)"
-msgstr "WEP dinámica (802.1X)"
+msgid "Dynamic WEP (802.1x)"
+msgstr "WEP dinámica (802.1x)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
 #: ../src/libnma/nma-wifi-dialog.c:973 ../src/libnm-gtk/nm-wifi-dialog.c:975
@@ -4032,8 +4032,8 @@ msgid "%s connection"
 msgstr "Conexión %s"
 
 #: ../src/wireless-security/eap-method.c:57
-msgid "undefined error in 802.1X security (wpa-eap)"
-msgstr "error no definido en la seguridad 802.1X (wpa-eap)"
+msgid "undefined error in 802.1x security (wpa-eap)"
+msgstr "error no definido en la seguridad 802.1x (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:233
 msgid "no file selected"
@@ -4250,8 +4250,8 @@ msgstr ""
 "ningún certificado"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1X security"
-msgstr "Error desconocido al validar la seguridad 802.1X"
+msgid "Unknown error validating 802.1x security"
+msgstr "Error desconocido al validar la seguridad 802.1x"
 
 #: ../src/wireless-security/wireless-security.c:436
 msgid "TLS"
