--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,18 @@
 ======================================================
+network-manager-applet-1.4
+Overview of changes since network-manager-applet-1.2.0
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Added support for multiple VPN connections
+* Added new pages for changing team and team-port configurations
+* Improved error reporting in the wireless security page
+* A single VPN plugins now supports the creation of multiple
+    connection types
+* Fixed some crashes
+
+======================================================
 network-manager-applet-1.2
 Overview of changes since network-manager-applet-1.0.0
 ======================================================
