Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -2927,7 +2927,7 @@ msgstr "Adreça MAC del dispositiu Bluetooh. Per exemple: 00:11:22:33:44:55"
 
 #: ../src/connection-editor/page-bluetooth.c:125
 msgid "Could not load Bluetooth user interface."
-msgstr "No s'ha pogut carregar la interfície d'usuari Bluetooth "
+msgstr "No s'ha pogut carregar la interfície d'usuari Bluetooth."
 
 #: ../src/connection-editor/page-bluetooth.c:175
 #, c-format
@@ -2945,7 +2945,7 @@ msgstr "Tipus de Bluetooth"
 
 #: ../src/connection-editor/page-bluetooth.c:321
 msgid "Select the type of the Bluetooth connection profile."
-msgstr "Selecciona el tipus del perfil de connexió Bluetooth"
+msgstr "Selecciona el tipus del perfil de connexió Bluetooth."
 
 #: ../src/connection-editor/page-bluetooth.c:326
 msgid "_Personal Area Network"
