Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -9,14 +9,14 @@
 # Gladys Guerrero  <gguerrer@redhat.com>, 2010.
 # Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008, 2009, 2010, 2011.
 # 
-# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010, 2011, 2012, 2013, 2014, 2015., 2016.
+# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010, 2011, 2012, 2013, 2014, 2015, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: networkmanager-applet.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=NetworkManager&keywords=I18N+L10N&component=nm-applet\n"
-"POT-Creation-Date: 2016-07-26 09:21+0000\n"
+"POT-Creation-Date: 2016-08-23 12:32+0000\n"
 "PO-Revision-Date: 2016-07-26 13:28+0200\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
@@ -763,8 +763,7 @@ msgstr "Falló al añadir la conexión nueva"
 msgid "Error displaying connection information:"
 msgstr "Ha ocurrido un error al mostrar información de la conexión:"
 
-#: ../src/applet-dialogs.c:72
-#: ../src/connection-editor/page-wifi-security.c:332
+#: ../src/applet-dialogs.c:72 ../src/connection-editor/page-wifi-security.c:332
 #: ../src/libnma/nma-wifi-dialog.c:946 ../src/libnm-gtk/nm-wifi-dialog.c:948
 #: ../src/wireless-security/wireless-security.c:448
 msgid "LEAP"
@@ -1104,8 +1103,7 @@ msgstr ""
 "predeterminada."
 
 #: ../src/connection-editor/ce-new-connection.ui.h:1 ../src/libnma/wifi.ui.h:1
-#: ../src/libnm-gtk/wifi.ui.h:1
-#: ../src/wireless-security/eap-method-fast.ui.h:1
+#: ../src/libnm-gtk/wifi.ui.h:1 ../src/wireless-security/eap-method-fast.ui.h:1
 #: ../src/wireless-security/eap-method-peap.ui.h:1
 #: ../src/wireless-security/eap-method-ttls.ui.h:1
 #: ../src/wireless-security/ws-dynamic-wep.ui.h:1
@@ -1302,13 +1300,11 @@ msgstr "Edad _máxima:"
 msgid "_Aging time:"
 msgstr "_Tiempo de de caducidad:"
 
-#: ../src/connection-editor/ce-page.c:78
-#: ../src/connection-editor/ce-page.c:112
+#: ../src/connection-editor/ce-page.c:78 ../src/connection-editor/ce-page.c:112
 msgid "automatic"
 msgstr "automático"
 
-#: ../src/connection-editor/ce-page.c:86
-#: ../src/connection-editor/ce-page.c:121
+#: ../src/connection-editor/ce-page.c:86 ../src/connection-editor/ce-page.c:121
 #: ../src/connection-editor/ce-page-dcb.ui.h:13
 #: ../src/connection-editor/page-wifi.c:168
 #: ../src/connection-editor/page-wifi.c:172
@@ -1965,7 +1961,6 @@ msgstr "Enviar paquetes _echo PPP"
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:1
 #: ../src/connection-editor/ce-page-team.ui.h:19
-#| msgid "Advanced"
 msgid "Ad_vanced..."
 msgstr "Avanzada…"
 
@@ -1975,7 +1970,6 @@ msgstr ""
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:3
 #: ../src/connection-editor/ce-page-team.ui.h:9
-#| msgid "Ethernet Networks"
 msgid "Ethernet port state"
 msgstr "Estado del puerto Ethernet"
 
@@ -2010,7 +2004,6 @@ msgid "ID of queue which this port should be mapped to."
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:10
-#| msgid "_Priority:"
 msgid "_Port priority:"
 msgstr "_Prioridad del puerto:"
 
@@ -2041,12 +2034,10 @@ msgid "Active-Backup runner options"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:16
-#| msgid "_Priority:"
 msgid "_LACP port priority:"
 msgstr "Prioridad del puerto _LACP:"
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:17
-#| msgid "Private _key:"
 msgid "LACP port _key:"
 msgstr "Cla_ve del puerto LACP:"
 
@@ -2087,19 +2078,16 @@ msgstr ""
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:25
 #: ../src/connection-editor/ce-page-team.ui.h:71
-#| msgid "Link _up delay:"
 msgid "_Up delay:"
 msgstr "_Retardo al levantar el enlace:"
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:26
 #: ../src/connection-editor/ce-page-team.ui.h:72
-#| msgid "Link _down delay:"
 msgid "_Down delay:"
 msgstr "Retardo al _desconectar el enlace:"
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:27
 #: ../src/connection-editor/ce-page-team.ui.h:73
-#| msgid "_Parent interface:"
 msgid "Send _interval:"
 msgstr "_Intervalo de envío:"
 
@@ -2215,7 +2203,6 @@ msgstr "I_mportar configuración redundada desde un archivo…"
 
 #: ../src/connection-editor/ce-page-team-port.ui.h:47
 #: ../src/connection-editor/ce-page-team.ui.h:94
-#| msgid "_JSON config:"
 msgid "Edit _JSON configuration:"
 msgstr "Editar configuración de _JSON:"
 
@@ -2233,7 +2220,6 @@ msgid "Highest priority (stable)"
 msgstr "Prioridad más alta (estable)"
 
 #: ../src/connection-editor/ce-page-team.ui.h:3
-#| msgid "Group Bandwidth:"
 msgid "Bandwidth"
 msgstr "Ancho de banda"
 
@@ -2242,7 +2228,6 @@ msgid "Highest number of ports"
 msgstr "Número de puertos más alto"
 
 #: ../src/connection-editor/ce-page-team.ui.h:5
-#| msgid "Priority"
 msgid "Port priority"
 msgstr "Prioridad del puerto"
 
@@ -2273,8 +2258,6 @@ msgid "LACP"
 msgstr "LACP"
 
 #: ../src/connection-editor/ce-page-team.ui.h:25
-#| msgctxt "Wi-Fi/Ethernet security"
-#| msgid "None"
 msgid "None"
 msgstr "Ninguna"
 
@@ -2293,7 +2276,6 @@ msgid "VLAN"
 msgstr "VLAN"
 
 #: ../src/connection-editor/ce-page-team.ui.h:31
-#| msgid "FIP"
 msgid "IP"
 msgstr "IP"
 
@@ -2302,7 +2284,6 @@ msgid "Any L3 protocol"
 msgstr "Cualquier protocolo L3"
 
 #: ../src/connection-editor/ce-page-team.ui.h:33
-#| msgid "GTC"
 msgid "TCP"
 msgstr "TCP"
 
@@ -2335,7 +2316,6 @@ msgid "Multicast _rejoin interval:"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:46
-#| msgid "Hardware Address:"
 msgid "_Hardware Address:"
 msgstr "Dirección _hardware:"
 
@@ -2350,7 +2330,6 @@ msgid "_Runner:"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:50
-#| msgid "Hardware Address:"
 msgid "_Hardware address policy:"
 msgstr "Política de dirección _hardware:"
 
@@ -2386,7 +2365,6 @@ msgid ""
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:57
-#| msgid "_Priority:"
 msgid "_System priority:"
 msgstr "_Prioridad del sistema:"
 
@@ -2431,12 +2409,10 @@ msgid "Name of active Tx balancer. Active Tx balancing is disabled by default."
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:67
-#| msgid "Transmission po_wer:"
 msgid "Transmission _balancing interval:"
 msgstr "_Intervalo de _balanceo de la transmisión:"
 
 #: ../src/connection-editor/ce-page-team.ui.h:68
-#| msgid "Transmission po_wer:"
 msgid "_Transmission balancer:"
 msgstr "_Balanceador de la transmisión:"
 
@@ -2633,8 +2609,8 @@ msgid "Bond"
 msgstr "Bond"
 
 #: ../src/connection-editor/connection-helpers.c:116
-#: ../src/connection-editor/page-team.c:1028
-#: ../src/libnm-gtk/nm-ui-utils.c:335 ../src/libnm-gtk/nm-ui-utils.c:579
+#: ../src/connection-editor/page-team.c:1028 ../src/libnm-gtk/nm-ui-utils.c:335
+#: ../src/libnm-gtk/nm-ui-utils.c:579
 msgid "Team"
 msgstr "Unir"
 
@@ -2885,11 +2861,15 @@ msgid "Did not find a connection with UUID '%s'"
 msgstr "No se encontró una conexión con UUID «%s»"
 
 #: ../src/connection-editor/page-8021x-security.c:109
-msgid "802.1x Security"
+#, fuzzy
+#| msgid "802.1x Security"
+msgid "802.1X Security"
 msgstr "Seguridad 802.1x"
 
 #: ../src/connection-editor/page-8021x-security.c:111
-msgid "Could not load 802.1x Security user interface."
+#, fuzzy
+#| msgid "Could not load 802.1x Security user interface."
+msgid "Could not load 802.1X Security user interface."
 msgstr "No se pudo cargar la interfaz de usuario de seguridad 802.1x."
 
 #: ../src/connection-editor/page-8021x-security.c:125
@@ -3450,8 +3430,9 @@ msgid "WEP 128-bit Passphrase"
 msgstr "Frase de paso WEP de 128 bits"
 
 #: ../src/connection-editor/page-wifi-security.c:345
-#: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
-msgid "Dynamic WEP (802.1x)"
+#, fuzzy
+#| msgid "Dynamic WEP (802.1x)"
+msgid "Dynamic WEP (802.1X)"
 msgstr "WEP dinámica (802.1x)"
 
 #: ../src/connection-editor/page-wifi-security.c:358
@@ -3809,6 +3790,10 @@ msgctxt "Wifi/wired security"
 msgid "None"
 msgstr "Ninguna"
 
+#: ../src/libnma/nma-wifi-dialog.c:959 ../src/libnm-gtk/nm-wifi-dialog.c:961
+msgid "Dynamic WEP (802.1x)"
+msgstr "WEP dinámica (802.1x)"
+
 #: ../src/libnma/nma-wifi-dialog.c:1071 ../src/libnm-gtk/nm-wifi-dialog.c:1075
 msgid "C_reate"
 msgstr "C_rear"
@@ -4032,7 +4017,9 @@ msgid "%s connection"
 msgstr "Conexión %s"
 
 #: ../src/wireless-security/eap-method.c:57
-msgid "undefined error in 802.1x security (wpa-eap)"
+#, fuzzy
+#| msgid "undefined error in 802.1x security (wpa-eap)"
+msgid "undefined error in 802.1X security (wpa-eap)"
 msgstr "error no definido en la seguridad 802.1x (wpa-eap)"
 
 #: ../src/wireless-security/eap-method.c:233
@@ -4250,7 +4237,9 @@ msgstr ""
 "ningún certificado"
 
 #: ../src/wireless-security/wireless-security.c:72
-msgid "Unknown error validating 802.1x security"
+#, fuzzy
+#| msgid "Unknown error validating 802.1x security"
+msgid "Unknown error validating 802.1X security"
 msgstr "Error desconocido al validar la seguridad 802.1x"
 
 #: ../src/wireless-security/wireless-security.c:436
