Fix Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -1651,7 +1651,7 @@ msgstr "_Dispositiu:"
 #: ../src/connection-editor/ce-page-ethernet.ui.h:15
 #: ../src/connection-editor/ce-page-wifi.ui.h:11
 msgid "C_loned MAC address:"
-msgstr "Adreça _MAC falsejada:"
+msgstr "Adreça _MAC clonada:"
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:16
 #: ../src/connection-editor/ce-page-wifi.ui.h:10
@@ -2476,7 +2476,7 @@ msgstr "Nom de la inter_fície VLAN:"
 
 #: ../src/connection-editor/ce-page-vlan.ui.h:3
 msgid "Cloned MAC _address:"
-msgstr "_Adreça MAC falsejada:"
+msgstr "_Adreça MAC clonada:"
 
 #: ../src/connection-editor/ce-page-vlan.ui.h:6
 msgid "VLAN _id:"
