--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,17 @@
 ======================================================
+network-manager-applet-1.2.6
+Overview of changes since network-manager-applet-1.2.4
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Updated Brazilian Portuguese, Croatian, Czech, German, Hungarian,
+  Icelandic, Polish, Serbian, Slovak and Swedish translations.
+* Fixed handling of 802.1X secrets in the applet and the connection
+  editor.
+* Other minor improvements.
+
+======================================================
 network-manager-applet-1.2.4
 Overview of changes since network-manager-applet-1.2.2
 ======================================================
