editor: fix clashing and missing accelerator keys on ethernet page

--- a/po/kk.po
+++ b/po/kk.po
@@ -1653,7 +1653,7 @@ msgstr ""
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:31
 #| msgid "_Link Monitoring:"
-msgid "Link negotiation:"
+msgid "Lin_k negotiation:"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:32
@@ -1675,7 +1675,7 @@ msgid ""
 msgstr ""
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:35
-msgid "_Duplex:"
+msgid "Duple_x:"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:36
