--- a/po/pl.po
+++ b/po/pl.po
@@ -1701,8 +1701,8 @@ msgstr ""
 "magicznych pakietów."
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:31
-msgid "Link negotiation:"
-msgstr "Negocjacja łącza:"
+msgid "Lin_k negotiation:"
+msgstr "Negoc_jacja łącza:"
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:32
 msgid ""
@@ -1729,8 +1729,8 @@ msgstr ""
 "prędkości należy się upewnić, że urządzenie ją obsługuje."
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:35
-msgid "_Duplex:"
-msgstr "_Dupleks:"
+msgid "Duple_x:"
+msgstr "Duple_ks:"
 
 #: ../src/connection-editor/ce-page-ethernet.ui.h:36
 msgid ""
