Updated Danish translation

--- a/po/da.po
+++ b/po/da.po
@@ -21,7 +21,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=NetworkManager&keywords=I18N+L10N&component=nm-applet\n"
 "POT-Creation-Date: 2017-01-16 16:39+0000\n"
-"PO-Revision-Date: 2017-01-28 13:35+0100\n"
+"PO-Revision-Date: 2017-01-29 19:48+0100\n"
 "Last-Translator: Alan Mortensen <alanmortensen.am@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -1180,7 +1180,7 @@ msgstr "ARP"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:10
 msgid "Bonded _connections:"
-msgstr "Bundne _forbindelser:"
+msgstr "B_undne forbindelser:"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:11
 #: ../src/connection-editor/ce-page-wifi.ui.h:18
@@ -1207,7 +1207,7 @@ msgstr "ms"
 #: ../src/connection-editor/ce-page-bridge.ui.h:6
 #: ../src/connection-editor/ce-page-team.ui.h:16
 msgid "_Interface name:"
-msgstr "_Grænsefladenavn:"
+msgstr "Gr_ænsefladenavn:"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:18
 msgid "_Link Monitoring:"
@@ -1307,7 +1307,7 @@ msgstr "_Maks. alder:"
 
 #: ../src/connection-editor/ce-page-bridge.ui.h:13
 msgid "_Aging time:"
-msgstr "_Forældelsestid:"
+msgstr "Fo_rældelsestid:"
 
 #: ../src/connection-editor/ce-page.c:78 ../src/connection-editor/ce-page.c:112
 msgid "automatic"
@@ -1737,7 +1737,7 @@ msgstr "Forbind automatisk til _VPN når denne forbindelse er i brug"
 
 #: ../src/connection-editor/ce-page-general.ui.h:2
 msgid "All _users may connect to this network"
-msgstr "Alle _brugere må forbinde til dette netværk"
+msgstr "A_lle brugere må forbinde til dette netværk"
 
 #: ../src/connection-editor/ce-page-general.ui.h:3
 msgid "_Automatically connect to this network when it is available"
@@ -2973,7 +2973,7 @@ msgstr "_Luk"
 
 #: ../src/connection-editor/nm-connection-editor.ui.h:4
 msgid "Connection _name:"
-msgstr "Forbindelses_navn:"
+msgstr "For_bindelsesnavn:"
 
 #: ../src/connection-editor/nm-connection-editor.ui.h:5
 msgid "_Export…"
