--- a/po/da.po
+++ b/po/da.po
@@ -21,7 +21,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=NetworkManager&keywords=I18N+L10N&component=nm-applet\n"
 "POT-Creation-Date: 2017-02-02 13:04+0000\n"
-"PO-Revision-Date: 2017-02-11 19:32+0100\n"
+"PO-Revision-Date: 2017-02-25 19:22+0100\n"
 "Last-Translator: Alan Mortensen <alanmortensen.am@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -191,7 +191,7 @@ msgid ""
 "construct property \"%s\" for object '%s' can't be set after construction"
 msgstr ""
 "construct-egenskaben \"%s\" for objektet \"%s\" kan ikke angives efter "
-"construction"
+"konstruktion"
 
 #: ../shared/nm-utils/nm-shared-utils.c:207
 #, c-format
