c-e: fix typo in translatable string (2)
https://bugzilla.gnome.org/show_bug.cgi?id=780335
(cherry picked from commit 25713e5451db9d2b220aa4d8d694e35d0dcb1f2d)

--- a/po/da.po
+++ b/po/da.po
@@ -2637,7 +2637,7 @@ msgstr ""
 "pakkens Tx-hash."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Felter til transmissionshash"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
