--- a/po/de.po
+++ b/po/de.po
@@ -2466,7 +2466,7 @@ msgstr ""
 "Prüfsumme der Pakete verwendet werden soll"
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Felder für die Übertragungs-Prüfsumme"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
