--- a/po/lt.po
+++ b/po/lt.po
@@ -2610,7 +2610,7 @@ msgstr ""
 "maišos skaičiavimui."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Laukai perdavimo maišai"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
