--- a/po/sk.po
+++ b/po/sk.po
@@ -2614,7 +2614,7 @@ msgid ""
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
