--- a/po/ca.po
+++ b/po/ca.po
@@ -2633,7 +2633,7 @@ msgstr ""
 "la computació del resum Tx."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Camps per al resum de transmissió"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
