--- a/po/cs.po
+++ b/po/cs.po
@@ -2427,7 +2427,7 @@ msgstr ""
 "paketu Tx."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "Pole pro ode_sílací haš"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
