--- a/po/it.po
+++ b/po/it.po
@@ -2647,7 +2647,7 @@ msgstr ""
 "pacchetto trasmesso"
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "Cam_pi per il codice di trasmissione"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
