--- a/po/kk.po
+++ b/po/kk.po
@@ -2499,7 +2499,7 @@ msgid ""
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr ""
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
