--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2718,7 +2718,7 @@ msgstr ""
 "Tx paketa."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Polja za heš prenosa"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
