c-e: fix typo in translatable string (2)
https://bugzilla.gnome.org/show_bug.cgi?id=780335

--- a/po/pl.po
+++ b/po/pl.po
@@ -2635,7 +2635,7 @@ msgstr ""
 "pakietów Tx."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for transmision hash"
+msgid "_Fields for transmission hash"
 msgstr "_Pola sumy kontrolnej przesyłania"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
