c-e: fix typo in translatable string
https://bugzilla.gnome.org/show_bug.cgi?id=780335
(cherry picked from commit a92229f988e1288d3e35494022230e16997c3ea6)

--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2718,7 +2718,7 @@ msgstr ""
 "Tx paketa."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for tramsmission hash"
+msgid "_Fields for transmision hash"
 msgstr "_Polja za heš prenosa"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
