--- a/po/hu.po
+++ b/po/hu.po
@@ -2440,7 +2440,7 @@ msgstr ""
 "átviteli hashének kiszámításához."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for tramsmission hash"
+msgid "_Fields for transmision hash"
 msgstr "_Mezők az átviteli hashhez"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
