--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2680,7 +2680,7 @@ msgstr ""
 "de hash de Tx de pacote."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for tramsmission hash"
+msgid "_Fields for transmision hash"
 msgstr "Campos _de hash de transmissão"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
