--- a/po/sr.po
+++ b/po/sr.po
@@ -2718,7 +2718,7 @@ msgstr ""
 "Tx пакета."
 
 #: ../src/connection-editor/ce-page-team.ui.h:64
-msgid "_Fields for tramsmission hash"
+msgid "_Fields for transmision hash"
 msgstr "_Поља за хеш преноса"
 
 #: ../src/connection-editor/ce-page-team.ui.h:65
